--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".record.RecordFragment">
+    tools:context=".record.view.RecordFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -41,18 +41,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:valueFrom="3"
-            android:valueTo="180"
-            android:stepSize="1"
             app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
             app:layout_constraintStart_toStartOf="@id/startVerticalGuideline"
             app:layout_constraintEnd_toEndOf="@id/endVerticalGuideline" />
 
         <Button
-            android:id="@+id/recordButton"
+            android:id="@+id/startCameraButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/record_button_text"
+            android:text="@string/start_camera_button_text"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/durationSlider"
             app:layout_constraintStart_toStartOf="parent"
